--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                 id: 1,
                 title: "الدراسات الإجتماعية-للصف الخامس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1C95w0aC2R7oy9KUfUiciNMPekFa6zUNU/preview",
+                downloadLink: "https://drive.google.com/file/d/1C95w0aC2R7oy9KUfUiciNMPekFa6zUNU/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "5",
                 gradeName: "الصف الخامس",
@@ -339,8 +339,8 @@
                 id: 2,
                  title: "الدراسات الإجتماعية-للصف الخامس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/12_525wwOfltnOD_PPc7C7o5u8KhsA64l/preview",
+                downloadLink: "https://drive.google.com/file/d/12_525wwOfltnOD_PPc7C7o5u8KhsA64l/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "5",
                 gradeName: "الصف الخامس",
@@ -351,8 +351,8 @@
                 id: 3,
                  title: "الدراسات الإجتماعية-للصف الخامس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1nHec0pcLM6gqyMYcEk03XPJTeqSyvl_Q/preview",
+                downloadLink: "https://drive.google.com/file/d/1nHec0pcLM6gqyMYcEk03XPJTeqSyvl_Q/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "5",
                 gradeName: "الصف الخامس",
@@ -363,8 +363,8 @@
                 id: 4,
                 title: "الدراسات الإجتماعية-للصف الخامس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1PAv4mwgjyK4IgwYDHAgB1NQLm3jMs7Ee/preview",
+                downloadLink: "https://drive.google.com/file/d/1PAv4mwgjyK4IgwYDHAgB1NQLm3jMs7Ee/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "5",
                 gradeName: "الصف الخامس",
@@ -375,33 +375,22 @@
                 id: 5,
                 title: "الدراسات الإجتماعية-للصف الخامس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1L-79QLeAucc1f5dVknKEKc3a7Rsc-vxz/preview",
+                downloadLink: "https://drive.google.com/file/d/1L-79QLeAucc1f5dVknKEKc3a7Rsc-vxz/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "5",
                 gradeName: "الصف الخامس",
                 date: "05",
                 type: "نهائي"
             },
-            {
-                id: 6,
-                title: "الدراسات الإجتماعية-للصف الخامس",
-                description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
-                subject: "الدراسات الإجتماعية",
-                grade: "5",
-                gradeName: "الصف الخامس",
-                date: "06",
-                type: "نهائي"
-            },
+            
              //الرياضيات    للصف السادس  الفصل الثاني 2023/2024
             {
                 id: 7,
                 title: "الدراسات الإجتماعية-للصف السادس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1wMa1a4NUf4CaeqlU8DgNVy5YGuhcFzzr/preview",
+                downloadLink: "https://drive.google.com/file/d/1wMa1a4NUf4CaeqlU8DgNVy5YGuhcFzzr/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "6",
                 gradeName: "الصف السادس",
@@ -412,8 +401,8 @@
                 id: 8,
                 title: "الدراسات الإجتماعية-للصف السادس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1H8wAPxZKO3UPMfxdNucNA1XcRia0n14R/preview",
+                downloadLink: "https://drive.google.com/file/d/1H8wAPxZKO3UPMfxdNucNA1XcRia0n14R/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "6",
                 gradeName: "الصف السادس",
@@ -424,8 +413,8 @@
                 id: 9,
                  title: "الدراسات الإجتماعية-للصف السادس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1fZsbuqt7owev4UTXGqb_nUW73F3Mq2vx/preview",
+                downloadLink: "https://drive.google.com/file/d/1fZsbuqt7owev4UTXGqb_nUW73F3Mq2vx/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "6",
                 gradeName: "الصف السادس",
@@ -436,8 +425,8 @@
                 id: 10,
                 title: "الدراسات الإجتماعية-للصف السادس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1_WdcV1TcABaGMMZfhpNY3v4RrHiUu0gQ/preview",
+                downloadLink: "https://drive.google.com/file/d/1_WdcV1TcABaGMMZfhpNY3v4RrHiUu0gQ/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "6",
                 gradeName: "الصف السادس",
@@ -448,8 +437,8 @@
                 id: 11,
                 title: "الدراسات الإجتماعية-للصف السادس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1JkY6Rdn5ECcql0pwxM7b4J71U1U-KCuD/preview",
+                downloadLink: "https://drive.google.com/file/d/1JkY6Rdn5ECcql0pwxM7b4J71U1U-KCuD/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "6",
                 gradeName: "الصف السادس",
@@ -460,8 +449,8 @@
                 id: 12,
                  title: "الدراسات الإجتماعية-للصف السادس",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1cXb1BTlYYhG8GE6c-qnYTg35-3p-anhs/preview",
+                downloadLink: "https://drive.google.com/file/d/1cXb1BTlYYhG8GE6c-qnYTg35-3p-anhs/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "6",
                 gradeName: "الصف السادس",
@@ -473,8 +462,8 @@
                 id: 13,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1HyrPEcbXJeulBidUwuTeOyDtf_ey9miV/preview",
+                downloadLink: "https://drive.google.com/file/d/1HyrPEcbXJeulBidUwuTeOyDtf_ey9miV/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -485,8 +474,8 @@
                 id: 14,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1rxlmXjwXrjwKxLkwckt3WkTa7IQ70N03/preview",
+                downloadLink: "https://drive.google.com/file/d/1rxlmXjwXrjwKxLkwckt3WkTa7IQ70N03/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -497,8 +486,8 @@
                 id: 15,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1LxotqD03uyb817vglwnK0JFSrqr8vwX8/preview",
+                downloadLink: "https://drive.google.com/file/d/1LxotqD03uyb817vglwnK0JFSrqr8vwX8/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -509,8 +498,8 @@
                 id: 16,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1_gaYwX1pDSE_oOvB5xxp5xqGB0XezK2O/preview",
+                downloadLink: "https://drive.google.com/file/d/1_gaYwX1pDSE_oOvB5xxp5xqGB0XezK2O/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -521,8 +510,8 @@
                 id: 17,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/19kPOM1vZpN6uuxcrltojUyrG_OelrHnM/preview",
+                downloadLink: "https://drive.google.com/file/d/19kPOM1vZpN6uuxcrltojUyrG_OelrHnM/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -533,8 +522,8 @@
                 id: 18,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1mAQVSBDr3RsySaZaUqXECSDDvcGTQz3v/preview",
+                downloadLink: "https://drive.google.com/file/d/1mAQVSBDr3RsySaZaUqXECSDDvcGTQz3v/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -545,8 +534,8 @@
                 id: 19,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1wSJeEQUUAMT2Vj60dVknt4r4bb_xQhOl/preview",
+                downloadLink: "https://drive.google.com/file/d/1wSJeEQUUAMT2Vj60dVknt4r4bb_xQhOl/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
@@ -557,8 +546,8 @@
                 id: 20,
                 title: "الدراسات الإجتماعية-للصف السابع",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/18sFxzYEzWl7pKNSk45wyEd7viCGu-4_B/preview",
+                downloadLink: "https://drive.google.com/file/d/18sFxzYEzWl7pKNSk45wyEd7viCGu-4_B/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "7",
                 gradeName: "الصف السابع",
