--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
                 id: 21,
                 title: "الدراسات الإجتماعية-للصف الثامن",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1oQnR7ZSSw6_H5I8Sbamuu2ydVvyArP5F/preview",
+                downloadLink: "https://drive.google.com/file/d/1oQnR7ZSSw6_H5I8Sbamuu2ydVvyArP5F/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "8",
                 gradeName: "الصف الثامن",
@@ -571,8 +571,8 @@
                 id: 22,
                 title: "الدراسات الإجتماعية-للصف الثامن",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1q3v8RHGMLlKMaCBi0VNToA51F7EN1h-B/preview",
+                downloadLink: "https://drive.google.com/file/d/1q3v8RHGMLlKMaCBi0VNToA51F7EN1h-B/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "8",
                 gradeName: "الصف الثامن",
@@ -583,8 +583,8 @@
                 id: 23,
                 title: "الدراسات الإجتماعية-للصف الثامن",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1xh3aeorvu6MrQNmhbbswDZ5EY4F0-u9h/preview",
+                downloadLink: "https://drive.google.com/file/d/1xh3aeorvu6MrQNmhbbswDZ5EY4F0-u9h/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "8",
                 gradeName: "الصف الثامن",
@@ -595,8 +595,68 @@
                 id: 24,
                 title: "الدراسات الإجتماعية-للصف الثامن",
                 description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1TRcyrvwpfu7rHn-N93l_SUdleWr5kjRb/preview",
+                downloadLink: "https://drive.google.com/file/d/1TRcyrvwpfu7rHn-N93l_SUdleWr5kjRb/view?usp=sharing",
+                subject: "الدراسات الإجتماعية",
+                grade: "8",
+                gradeName: "الصف الثامن",
+                date: "04",
+                type: "نهائي"
+            },
+              {
+                id: 21,
+                title: "الدراسات الإجتماعية-للصف الثامن",
+                description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
+                previewLink: "https://drive.google.com/file/d/1J5jGrcFKV3M4kwFHyPevwo9wjmTPIvTM/preview",
+                downloadLink: "https://drive.google.com/file/d/1J5jGrcFKV3M4kwFHyPevwo9wjmTPIvTM/view?usp=sharing",
+                subject: "الدراسات الإجتماعية",
+                grade: "8",
+                gradeName: "الصف الثامن",
+                date: "ا01",
+                type: "نهائي"
+            },
+            {
+                id: 22,
+                title: "الدراسات الإجتماعية-للصف الثامن",
+                description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
+                previewLink: "https://drive.google.com/file/d/1N1_w96KbQO5qAXdjrBFWnzfj8SlMJU8N/preview",
+                downloadLink: "https://drive.google.com/file/d/1N1_w96KbQO5qAXdjrBFWnzfj8SlMJU8N/view?usp=sharing",
+                subject: "الدراسات الإجتماعية",
+                grade: "8",
+                gradeName: "الصف الثامن",
+                date: "02",
+                type: "نهائي"
+            },
+               {
+                id: 23,
+                title: "الدراسات الإجتماعية-للصف الثامن",
+                description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
+                previewLink: "https://drive.google.com/file/d/1K0hXIE2vNQemRwWXzj3bD2UfM_i_bAyX/preview",
+                downloadLink: "https://drive.google.com/file/d/1K0hXIE2vNQemRwWXzj3bD2UfM_i_bAyX/view?usp=sharing",
+                subject: "الدراسات الإجتماعية",
+                grade: "8",
+                gradeName: "الصف الثامن",
+                date: "03",
+                type: "نهائي"
+            },
+            {
+                id: 24,
+                title: "الدراسات الإجتماعية-للصف الثامن",
+                description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
+                previewLink: "https://drive.google.com/file/d/1b1Q4bVrqQ1NqAujr0TPd7YYUv7XmekCx/preview",
+                downloadLink: "https://drive.google.com/file/d/1b1Q4bVrqQ1NqAujr0TPd7YYUv7XmekCx/view?usp=sharing",
+                subject: "الدراسات الإجتماعية",
+                grade: "8",
+                gradeName: "الصف الثامن",
+                date: "04",
+                type: "نهائي"
+            },
+              {
+                id: 24,
+                title: "الدراسات الإجتماعية-للصف الثامن",
+                description: "امتحان الدراسات الإجتاعية الفصل الثاني 2023-2024 ",
+                previewLink: "https://drive.google.com/file/d/1h-6A-C4ulCoLVP3ty2yj5l7TMU2J9734/preview",
+                downloadLink: "https://drive.google.com/file/d/1h-6A-C4ulCoLVP3ty2yj5l7TMU2J9734/view?usp=sharing",
                 subject: "الدراسات الإجتماعية",
                 grade: "8",
                 gradeName: "الصف الثامن",
@@ -608,8 +668,8 @@
                 id: 25,
                 title: " التربية الإسلامية-للصف التاسع",
                 description: "امتحان التربية الإسلامية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/17BYWLtdVTy9zYUYQOVoO3Hw4fqdle_M4/preview",
+                downloadLink: "https://drive.google.com/file/d/17BYWLtdVTy9zYUYQOVoO3Hw4fqdle_M4/view?usp=sharing",
                 subject: "التربية الإسلامية",
                 grade: "9",
                 gradeName: "الصف التاسع",
@@ -621,8 +681,8 @@
                 id: 26,
                 title: " التربية الإسلامية-للصف العاشر",
                 description: "امتحان التربية الإسلامية الفصل الثاني 2023-2024 ",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1Mrg3DpzWp5y92fPH1fD-EV4ReypaMblc/preview",
+                downloadLink: "https://drive.google.com/file/d/1Mrg3DpzWp5y92fPH1fD-EV4ReypaMblc/view?usp=sharing",
                 subject: "التربية الإسلامية",
                 grade: "10",
                 gradeName: "الصف العاشر",
@@ -635,8 +695,8 @@
                 id: 27,
                 title: "الكيمياء-للصف الحادي عشر",
                 description: "امتحان الكيمياء الفصل الثاني-تجميع الامتحانات",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/1ZE1HFIyvUX6qEfeMJ1P5vsRxcBEVU24P/preview",
+                downloadLink: "https://drive.google.com/file/d/1ZE1HFIyvUX6qEfeMJ1P5vsRxcBEVU24P/view?usp=sharing",
                 subject: "الكيمياء",
                 grade: "11",
                 gradeName: "الصف الحادي عشر",
@@ -649,8 +709,8 @@
                 id: 28,
                 title: " الحضارة الإسلامية -للصف الحادي عشر",
                 description: "امتحان الحضارة الإسلامية الفصل الثاني-مجمع الامتحانات",
-                previewLink: "preview",
-                downloadLink: "",
+                previewLink: "https://drive.google.com/file/d/17XDBWEeTJiesNS19gwDuPXJdTDi1iyXf/preview",
+                downloadLink: "https://drive.google.com/file/d/17XDBWEeTJiesNS19gwDuPXJdTDi1iyXf/view?usp=sharing",
                 subject: "الحضارة الإسلامية",
                 grade: "11",
                 gradeName: "الصف الحادي عشر",
